@@ -1,7 +1,8 @@
 Version 1.0.10
 ==============
 
-* Improved deflection against slopes.
+* Pause all sounds when entering inventory or pause menu.
+* Improve deflection against slopes.
 * Fix sprint value going below zero.
 * Fix fog bulb density formula.
 * Fix electricity effect crashing 64-bit version of the engine.
